Update primogenitor, dependencies. Move test source root.